--- a/trial3/src/index.css
+++ b/trial3/src/index.css
@@ -3,9 +3,96 @@
   margin:2px;
   max-height: 100vh;
 }
-/* *img{
-  
-} */
+.add-post-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.preview-image {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 8px;
+}
+.drop-zone {
+  border: 2px dashed #ccc;
+  padding: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.drop-zone p {
+  margin: 0;
+}
+
+.drop-zone:hover {
+  border-color: #4caf50;
+}
+.add-post-container h1 {
+  font-size: 3.2em;
+  background-image: linear-gradient(to left, rgba(0, 0, 255, 0.5), rgba(255, 0, 0, 0.5));
+  line-height: 1.1;
+}
+
+
+#overlay {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px; /* Adjust the width as needed */
+  padding: 20px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  z-index: 999; /* Ensure it's above other elements */
+}
+
+.progress-bar-container {
+  text-align: center;
+}
+
+#progress-bar {
+  width: 100%;
+  height: 20px;
+  background: #4caf50;
+}
+
+#progress-text {
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+
+.post-button-area{
+  display: flex;
+  justify-content: center;
+}
+.post-button {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+}
+.welcomeTitle {
+  color: linear-gradient(to left, rgba(0, 0, 255, 0.5), rgba(255, 0, 0, 0.5));
+  margin-bottom: 18px;
+}
+
+.post-button:hover {
+  background-color: #45a049;
+}
+
 html{
   width: 100%;
 }
@@ -108,10 +195,7 @@ body {
 
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+
 footer{
   height:10%;
 }
@@ -258,6 +342,9 @@ footer{
   color: #888;
 }
 
+.post-title {
+  margin-bottom: 18px;
+}
 .post-image {
   width: 100%;
   max-height: 200px; /* Adjust as needed */
@@ -265,9 +352,7 @@ footer{
   margin-bottom: 8px;
 }
 
-.post-title {
-  margin-bottom: 8px;
-}
+
 
 .post-author {
   color: #555;
