--- a/trial3/src/index.css
+++ b/trial3/src/index.css
@@ -12,9 +12,10 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.preview-image {
+.preview-files {
   display: block;
-  width: 100%;
+  width: 40%;
+  margin-bottom: 10px;
   margin-top: 10px;
   border-radius: 8px;
 }
